src/test/deca/codegen/valid/math_float_ov_02.deca
// Description:
//    Programme testant l'overflow sur des entiers.
//
// Resultats:
//
//
//
// Historique:
//    cree le 22/01/2023

{
    float x = 2147483647;
    x = x*2147483647;
    x = x*2147483647;
    x = x*2147483647;
	x = x*15;
	x = x*1.06666666269302;

	print(x);
}